<resources>
    <string name="app_name">BancoImobiliarioDMO</string>

    <string name="dinheiro">Digite um valor</string>

    <string name="zero">0</string>
    <string name="um">1</string>
    <string name="dois">2</string>
    <string name="tres">3</string>
    <string name="quatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="sete">7</string>
    <string name="oito">8</string>
    <string name="nove">9</string>
    <string name="ponto">.</string>

    <string name="m">M</string>
    <string name="k">K</string>
    <string name="seta">--></string>
    <string name="c">C</string>
</resources>