<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".view.MainActivity">

    <EditText
        android:id="@+id/edit_dinheiro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:autofillHints="false"
        android:inputType="none"
        android:text="@string/dinheiro"
        android:textAlignment="textEnd"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:ignore="LabelFor" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_m"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="#FFEB3B"
            android:text="@string/m"
            android:textColor="#000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_interrogacao"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:text="\?"
            android:textColor="#000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_seta"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="#4CAF50"
            android:text="@string/seta"
            android:textColor="#000"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_k"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#2196F3"
            android:text="@string/k"
            android:textColor="#000"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_7"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="#000"
            android:text="@string/sete"
            android:textColor="#fff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_8"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="#000"
            android:text="@string/oito"
            android:textColor="#fff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_9"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#000"
            android:text="@string/nove"
            android:textColor="#fff"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_4"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="#000"
            android:text="@string/quatro"
            android:textColor="#fff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_5"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="#000"
            android:text="@string/cinco"
            android:textColor="#fff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_6"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#000"
            android:text="@string/seis"
            android:textColor="#fff"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_1"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="#000"
            android:text="@string/um"
            android:textColor="#fff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_2"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="#000"
            android:text="@string/dois"
            android:textColor="#fff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_3"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#000"
            android:text="@string/tres"
            android:textColor="#fff"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_c"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="#F44336"
            android:text="@string/c"
            android:textColor="#FFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_0"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="#000"
            android:text="@string/zero"
            android:textColor="#fff"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_ponto"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#000"
            android:text="@string/ponto"
            android:textColor="#fff"
            android:textSize="24sp" />

    </LinearLayout>


</LinearLayout>